Fixed checkstyle